--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
                     <h1 class="inspiration-title">My Inspiration</h1>
                     <p class="inspire-description">I want to become a developer because I think it's  good way to solve problem <br> websites like your real life </p>
             </div>
-                <video src="car.mp4"></video>
             </section>
+            
+            <video class="video" controls src="car.mp4" width="900"></video>
     </main>
     <footer>
     </footer>
