--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                     <p class="inspire-description">I want to become a developer because I think it's  good way to solve problem <br> websites like your real life </p>
             </div>
             </section>
-            
-            <video class="video" controls src="car.mp4" width="900"></video>
+
+            <video class="video-open" controls src="car.mp4" width="900"></video>
     </main>
     <footer>
     </footer>
