--- a/index.html
+++ b/index.html
@@ -62,8 +62,51 @@
                     <p class="inspire-description">I want to become a developer because I think it's  good way to solve problem <br> websites like your real life </p>
             </div>
             </section>
-
             <video class="video-open" controls src="car.mp4" width="900"></video>
+
+            <section class="current-target">
+                <div class="everytarget">
+
+                   <div class="three-target"> 
+                    <h1 class="target-title">My Current Target</h1>
+                    <p class="target-des">My current target is to learn everyday and become a good <br> programmer who can do any websites work.</p>
+                </div>
+                <div class="individualtarget">
+                    <div class="html-group">
+                        <img src="assets/html.png" alt="">
+                        <h1 class="html">HTML</h1>
+                        <p class="html-des">HTML Means Hyper Text Markup Language. <br>It builds website</p>
+                        <h3 class="learn-more">Learn More</h3>
+                    </div>
+                    <div class="css-group">
+                        <img src="assets/css.png" alt="">
+                        <h1 class="html">CSS</h1>
+                        <p class="html-des">CSS means Cascading style sheet. <br>It decorates website.</p>
+                        <h3 class="learn-more">Learn More</h3>
+                    </div>
+                    <div class="js-group">
+                        <img src="assets/js.png" alt="">
+                        <h1 class="html">JavaScript</h1>
+                        <p class="html-des">JS means Javascript. <br>It do all the hosting and inside works</p>
+
+                        <h3 class="learn-more">Learn More</h3>
+                        
+                    </div>
+                </div>
+            </div>
+            </section>
+
+            <section class="support-section">
+                <div class="handshakepic">
+                    <h1 class="support-title">I need Support</h1>
+                    <p class="support-des">Acknowledge me if anyone need to <br>write anything to me</p>
+                    <div class="submit">
+                        <input class="submit-box" type="text" name="" id="" placeholder="        Suggest me any feedback for me">
+                        <button class="submit-btn">Submit</button>
+                    </div>
+                </div>
+
+            </section>
     </main>
     <footer>
     </footer>
