--- a/index.html
+++ b/index.html
@@ -108,7 +108,15 @@
 
             </section>
     </main>
-    <footer>
+    <footer class="footer">
+        <div class="footer-color">
+            <h3 class="commitment">An open Commitment by Toki Tahmid Khan</h3>
+            <div class="icons">
+            <a href="https://www.facebook.com/tokitahmid.khan?mibextid=ZbWKwL" target="_blank"><img src="assets/facebook.png" alt=""></a>
+            <a href="https://github.com/toki513" target="_blank"><img src="assets/github.png" alt=""></a>
+            <a href="https://www.linkedin.com/in/toki-tahmid-3b19b41a2/" target="_blank"><img src="assets/linkedin-icon 1.png" alt=""></a>
+        </div>
+        </div>
     </footer>
 </body>
 </html>
